# rest-ncaa-get

./: .env  Cargo.toml
src/: main.rs
src/api/: task.rs
src/repository/: ddb.rs
