[package]
name = "rest-ncaa-get"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
uuid = { version = "1.10.0", features = ["v1"]}
serde = { version = "1.0.204", features = ["derive"]}
env_logger = "0.11.5"
log = "0.4.22"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"]}
ssh2 = "0.9.4"
actix-cors = "0.7.0"
serde_json = "1.0.121"
dotenv = "0.15.0"